--- a/tensorflow/examples/udacity/5_word2vec.ipynb
+++ b/tensorflow/examples/udacity/5_word2vec.ipynb
@@ -481,8 +481,7 @@
     "  # We use the cosine distance:\n",
     "  norm = tf.sqrt(tf.reduce_sum(tf.square(embeddings), 1, keep_dims=True))\n",
     "  normalized_embeddings = embeddings / norm\n",
-    "  valid_embeddings = tf.nn.embedding_lookup(\n",
-    "    normalized_embeddings, valid_dataset)\n",
+    "  valid_embeddings = tf.nn.embedding_lookup(normalized_embeddings, valid_dataset)\n",
     "  similarity = tf.matmul(valid_embeddings, tf.transpose(normalized_embeddings))"
    ]
   },
